# AG-auto-trade

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  GROUND_TRUTH.md  Makefile  README.md  VALIDATION_STATUS.md  pyproject.toml
.claude/: settings.json
.claude/commands/: audit-repo.md  backtest.md  check-risk.md  deployment-check.md  gate-status.md  validate-strategy.md
.claude/hooks/: bash_guard.py  file_guard.py  session-start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ag/: __init__.py  config.py  env.py
ag/alpha/: __init__.py  base.py
ag/data/: loader.py
ag/monitoring/: __init__.py
ag/readiness/: __init__.py  decision_engine.py  validators.py
ag/regime/: __init__.py  classifier.py
ag/risk/: __init__.py  calculations.py  engine.py
ag/validation/: __init__.py  cost_model.py  cpcv.py  deflated_sharpe.py  edge_validator.py  gate.py  metrics.py  monte_carlo.py  readiness.py  replay_harness.py  trial_log.jsonl  trial_log.py  walk_forward.py
docs/: GITHUB_SETUP.md  IMPLEMENTATION_PLAN.md  PROJECT_STATE.md  REALISTIC_OUTCOME.md  REPO_AUDIT_RECONCILED.md  ROADMAP.md  SUCCESS_CRITERIA.md  TRGS.md
docs/audits/: REPO_AUDIT_2026-06-14.md
docs/dispatch/: A1_5YR_GATE_DISPATCH.md  A1_FUNNEL_DIAGNOSIS.md  A2_DIAGNOSIS_PLAN.md
docs/reference/: A1_STRATEGY_README.md  ARCHITECTURAL_AUDIT_2026-05-28.md  CURRENT_STATUS_SNAPSHOT_2026-06-12.md  DOCS_INDEX.md  FINAL_DELIVERABLES_INDEX.md  GIT_SETUP_README.md  GROUND_TRUTH_OLD_SYSTEM.md  MONITORING_README.md  PHASE1_RUNBOOK.md  PHASE1_TECHNICAL_SPEC.md  PROJECT_OVERVIEW.md  (+11 more)
scripts/: run_a2_gate.py  run_alpha_backtest.py  run_gate.py  run_readiness_gate.py  run_signal_audit.py
tests/: conftest.py
(+109 files in other folders)
