[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ag-auto-trade"
version = "0.1.0"
description = "Validation-first multi-alpha intraday trading system (Phase 0 scaffold)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
phase1 = [
    # Add when Phase 1 begins: databento, nautilus_trader
    "ta>=0.11",   # regime classifier
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
