[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ag-auto-trade"
version = "0.1.0"
description = "Validation-first multi-alpha intraday trading system (Phase 0 scaffold)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",     # parquet I/O for cache layer and fixtures
]
phase1 = [
    "ta>=0.11",          # regime classifier
    "databento>=0.35",   # CME GLBX.MDP3 downloader — only needed for fresh downloads, not cache reads
    "ib_insync>=0.9",    # IB TWS/Gateway connector — only needed for fresh IB downloads, not cache reads
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
